--- a/category.html
+++ b/category.html
@@ -332,6 +332,7 @@
 
     <script src="lib/jquery-3.5.1.min.js"></script>
     <script src="lib/bootstrap-4.3.1.min.js"></script>
+    <script src="lib/notify.js"></script>
 
     <!-- Digital clock With 12 Format -->
     <script src="js/clock.js"></script>
