--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
 
     <script src="lib/jquery-3.5.1.min.js"></script>
     <script src="lib/bootstrap-4.3.1.min.js"></script>
+    <script src="lib/notify.js"></script>
 
     <script>
       $(document).ready(function () {
