--- a/lang/ar/shop.html
+++ b/lang/ar/shop.html
@@ -434,6 +434,7 @@
     <script src="../../lib/jquery-3.5.1.min.js"></script>
    
     <script src="../../lib/bootstrap-4.3.1.min.js"></script>
+    <script src="../../lib/notify.js"></script>
 
     <!-- changing walk cover image -->
     <script>
