--- a/lang/ar/shopping_cart.html
+++ b/lang/ar/shopping_cart.html
@@ -270,6 +270,7 @@
     <!-- JS FILES -->
     <script src="../../lib/jquery-3.5.1.min.js"></script>
     <script src="../../lib/bootstrap-4.3.1.min.js"></script>
+    <script src="../../lib/notify.js"></script>
 
     <script>
       $(document).ready(function () {
