--- a/shop.html
+++ b/shop.html
@@ -439,8 +439,8 @@
     <!-- js part -->
 
     <script src="lib/jquery-3.5.1.min.js"></script>
-   
     <script src="lib/bootstrap-4.3.1.min.js"></script>
+    <script src="lib/notify.js"></script>
 
     <!-- changing walk cover image -->
     <script>
